# boids_cinder

./: CMakeLists.txt  app.cpp
include/: catch.hpp  utility.hpp
include/Boids/: Boid.hpp  BoidController.hpp
include/Forces/: Force.hpp
include/Forces/Global/: GlobalForces.hpp
include/Forces/Local/: LocalForces.hpp  SpatialHash.hpp
src/: CMakeLists.txt
src/Boids/: Boid.cpp  BoidController.cpp
src/Forces/Global/: GlobalForces.cpp
src/Forces/Local/: LocalForces.cpp  SpatialHash.cpp
test/: CMakeLists.txt
test/TestSpatialHash/: CMakeLists.txt  test_spatial_hash.cpp
